--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </div>
 
             <div>
-            <input type="number" id="input1" placeholder="input1"> 
+            <input type="number" id="input1" placeholder=""> 
             </div>
 
             <div>
